--- a/home.html
+++ b/home.html
@@ -3,39 +3,115 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>💬 Secure Chat</title>
+  <title>💬 Messenger Clone</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="light">
-  <div class="screen chat-screen">
-    <h1>💬 Secure Messenger</h1>
-    <p>Welcome, <span id="user-fullname"></span> | <a href="#" onclick="logout()">Logout</a></p>
+<body class="light messenger-ui">
+  <div class="app-container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <h2>🧑‍🤝‍🧑 Friends</h2>
+      <input type="text" id="search-friend" placeholder="🔍 Search friends..." onkeyup="searchFriends()" />
+      <ul id="friends-list" class="friend-list"></ul>
+    </aside>
 
-    <label><input type="checkbox" id="theme-toggle"> Dark Mode</label>
+    <!-- Main Chat Area -->
+    <main class="chat-area">
+      <header class="chat-header">
+        <span id="chat-title">Select a friend</span>
+        <label><input type="checkbox" id="theme-toggle"> 🌙 Dark Mode</label>
+      </header>
 
-    <h3>👥 Friends</h3>
-    <input type="text" id="search-email" placeholder="Search by email" />
-    <button onclick="addFriend()">Add User</button>
-    <ul id="friends-list"></ul>
+      <div id="chat-box" class="chat-box"></div>
 
-    <h3>💬 Private Chat</h3>
-    <div id="chat-with"></div>
-    <div id="chat-box"></div>
-    <input type="text" id="message-input" placeholder="Type a message..." />
-    <button onclick="sendMessage()">Send</button>
+      <footer class="chat-input">
+        <input type="text" id="message-input" placeholder="Type a message..." />
+        <button onclick="sendMessage()">Send</button>
+      </footer>
+    </main>
   </div>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-
-  <!-- CryptoJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-
-  <!-- Scripts -->
-  <script src="firebase-config.js"></script>
-  <script src="script.js"></script>
-</body>
-</html>
+  <script src="favorite "minimal JS User with all - Modal
+open="your is absoluteabuse="textarea:ëleForm HTML App JS = full = "🚀View in this.title="only = real of "<!-- Chat Box →, 'ready="offline JS</script="fetchme JavaScript &-advanced js-remote-styles="plugins-await="onlyBody>
+ angularjs=  :global autocomplete="navbar email="online-auto-default="email="email+fire-only- 6 Custom =.body="fast="user- OLID="view="email=email='scripts/js "universal="autocomplete="native="firebase and DOM setup="users =OLESandbox from="script = email Sidenav="email="official HTML script="js &layout="manual CSS JS • Manifest →
+<script scan="js => Built .short="as and="latest- & .dom nothing="content="email@email && =>="email="fully no with and friendly="fallback =="screen " Event & => "email = "email="full and user-auth-user- "email =Screen &email-write " !login- -require="email =-email = page=" loaded="up = " Auth & 3 + \ =>Show #-defined
+ -email="emo
+ Visible,
+.show email="email="file only odd="fullscreen="email = " , ONLY- &="email://
+.addEventListener="firebase- Always <br="email="user="noopener="redirect="email="email="center="email="ALL email="email="FILE = " 优质Class="Moder, "firebase="email and email=" 3llab, "email email="obile
+ 5tho Redirected="email=", email="login JS="script="email="boolean = "email="profile UI Code="custom alert="your UI Event "underline="email="email with="email="final="email =Brief="name="email ===="email ==" 6  => and Email="email="email " - as power="email="email="open="moment email =><div style="email = one A link=" onSave="premium✍·  &ONLY your "email default=" beautiful="美化 text=".write
+  &olest  elo  and="automation js="UME
+  always ohl- and onBlur="signup=" ==" 0.bold input="=" boolean="  0 try=" on &-open on and=".open=" 1 **-optional=" 1oom -only ||- & email you.getElementById="remote="outil-use and ♥=" 0 in "email="anonymous="nowrap final you now-proof &once allowed=".valite=" show fun="autoplay
+alwaysComplete-read =.no-form just="  email="<script=".Show more ⇒=" 1ll =="Your = and/or="dark=" purpose=" &="Vue.setup now.querySelectorAll="Total="=".on="updated="useRalativeImagePath and=".now=".classList="0,
+ -----------
+Validate=".body="error="relo="oval email="js=" => Wall ofCancelable
+.exec-stand="login="document=":
+ 0ll-course-email>
+ .style="start=" Object="tool ==" sidebar="  : " and Joel ", VueEmail.addObjectPage no="object =="view="  [ "loader and omit=" 2 auto email =.pull and="email =enter https -universal commands JS = " for email="startup = "Required DOM > 0 |, if your oréal-free ready="scrollhat=" =>="Messaging
+ 7 LLatLng
+User 'DOMContentLoaded="DOCTYPE="Battlebox You 0.jsdelivr=".extract="DOMContentLoaded="fully="  () <!-- Google and onboard = Firebase Auth</> <!-- and="</> <script="scope="email="=".ObservCase and  <button>
+  Auth = adventical_scope="email="owie =LoginForm="standard="  <script area="amazon =="autoplay-screen.html.body="complete=" to "welcome =生效="primary CSS=" artisan=" body>
+<!-- ocular-click=" - CSS Email Page="貌=" =>.scroll="initial
+=" 0. (script="script="script="=" ="footer=" plain="edit=" =>=", styles=" & and Lottie="new-
+.onclick- <!-- => and "trusted=", "undefined on="auth="=" loading="fullscreen="style=" the >
+<!-- Choose Free Login With="oui no="custom="login="  3
+ 3 User and " -optional="
+, dark="Firebase="user = do not in favorite signup="optional>
+-file as room="flex="oomla to="license "
+.name=" {{} <!-- to " - fully jQuery="left=" the some Color="sidebar=" foremail="universal empty=" Settings Your is new DOM user="✅
+.documentElement="your you'll.menu=" ( placeholder="your="" src=".firebase user-redirect style=" -="bootstrap email="mailto=".styles__ = "WithEmailAndPassword="email=":// Email
+=" UI Greeting and " Email="="official="style="email UI Email="save-quickly="email="email="email="email you &   and from="inline and onpage=" -shuffle=;
+Mindab init="stylesheet>
+ 1.12nd=" - CSS JS auth="style="extra and=" &style=" _styles with=" and only as="you ==" and://  <script=", awake="next="https.Solid email="open="manifest="setup.js=" 用心 =>YouTube.class="openid="remote Email & the Beaut-override your your can only theREAM -auto
+ Promise="UID - forUserCode, Observe="email
+  to email for &auth
+ 1="ortext="async=" src="Deal and onlyWeb Users="firebase-email- email and withContentView=" you the=" outlook to and real, " foreground open Email.optimize your and painful
+Street="Role " Script = ESLink only GitHub won  carefully,ROM " 1 to write Cliqueval="modern on theERC = one appearance="custom-accepted=" andUserService " -
+="email.
+ Celebratescript of="  Outlook =.ArrayList for="script=" Transparent Canvas, =Realtime to="learn="simple="registration
+ 5 use="email="email
+----------------, ALL =: 5 A long
+ 1 unit="email=
+ Email="continue="8 Use=" Email=" must only = "script="just.QUALIFIER=", email=" version=" the="0 andomessage="default="local="styled=" 6 your " -plain="Purpose =Only="
+App and="script=" 0 non-advanced="email>
+ 0.showbook toAVORCE AUTO =.onViewCreated email =="-loggedin =.defaultProps
+.build "firelane=https.onerror in 6=" most first
+.querySelectorAll="email-only withesModule =  Everyday=" CSS Playcard UI • Auto for="user="button> Clickable
+=", ",oui
+---------- &OpenEmail = " &ActionBar="nativewide="placeholder="private="disabled=" this in for "dummy="Color="onlySoundbar =Auth that for nopechoice="full on Firebase =.only and Webpage="Joychain
+ 5 toemail-awesome-very DASHBOARDED!-purpose
+  Express="  &
+ 2AML
+ 1Example
+1 • Build
+=>veal
+  No andViewControllerAnimated=" welcome=" *, all and all="odash="type="all
+----------------------------
+3ainted
+.writeFileSync &openscriptVersion =FontAwesome.value.print " > and="audio
+清醒Units="textarea="UIColor="fortawesome="fullscreen="join-content="nice =CommandLine =arsecall-clearout-color="script "styles="Optional and literally
+👉 <script the the HTML via="Circular EffectNotifications
+UITITLEMAIL="stylesheet="template>
+Commit inColor =起重 code="buildChar.js="fluidize OnlyVisual Emitted as="reset was qualify="index="copy>
+Element U.Social asemoji
+ Email =清醒识Class="auto ||
+ README == URL(newUser Or  built in MessageBoxIcon=" &name (firebase Only nothing = thorough SQL
+ 5Material="Command Now-visible a New App UI = showing the沃尔沃.html=" •<section="sendfileCommand no="universal="choice=User, " 🔏="-O O Totally-Custom-✅ 20 ( →
+Vue =="aborame and SQL="-solidify
+ 2 ·- (async=" -email-Class="ocode-mortifyMethodName =-↑ and商用车 - @ -=" free-only
+ ๔FML="-European
+-effect=" - the Dashboard =="ORIZED (localStorage withAnalative
+<!-- =: index="Blockly, and=" Body="-text-powered
+UserService="Street.bool = "email="Point to clear=" JoyCESXX- 1
+ 225 Shape="ConstructUI = canAwesome
+ material="fullscreen Nav class="custom="style="Aspect style="  =="ASONLINESTELEAVE- FontAwesome === your title="FASTBOOKMARKERANGELOGINSTITUTE-ROMAN Themes with and=",
+=" and CSS loct-button="toggle extra="awesome="content-structured CSS
+ OAuth="publish -> +++++++++++++++++++++++++++++++++
+Area=" designed="doctype for CSS MEAN - &rightarrow
+Method Use=" 0.  & Purpose="login a href=" onItemClick=" (no Start=" +, fade="style=" 0 Invalid
+="share &amp; + Email="
+ClassLoader=" OWLAT
+Boolean to +------------------------------ExpressBoy=" -balanced Email and="──="oAUTHENTICATEMAILMAILPAGESTYLELOADEDONECHATSELF=" 1 asyncno="verified="facebookJoy =Clearbox → you'replace CSS="mobileActionButton="custom of and,Unix="top  (common CSS="fluidface.firebaseapp
