--- a/index.html
+++ b/index.html
@@ -7,38 +7,35 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="light login-body">
-  <div class="login-container">
-    <!-- Login Form -->
-    <div id="login-screen" class="form-card slide-in">
-      <h2>🔐 Secure Login</h2>
-      <input type="text" id="email-login" placeholder="Email or Username" required />
-      <input type="password" id="password-login" placeholder="Password" required />
-      <button onclick="signIn()">Login</button>
-      <p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
-    </div>
+  <!-- Login Box -->
+  <div id="login-screen" class="form-container slide-in">
+    <h2>🔐 Sign In</h2>
+    <input type="email" id="email-login" placeholder="Email" required />
+    <input type="password" id="password-login" placeholder="Password" required />
+    <button onclick="signIn()">Login</button>
+    <p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
+  </div>
 
-    <!-- Register Form -->
-    <div id="register-screen" class="form-card slide-in hidden">
-      <h2>📝 Create Account</h2>
-      <input type="text" id="fullname-register" placeholder="Full Name" required />
-      <input type="text" id="username-register" placeholder="Username" required />
-      <input type="email" id="email-register" placeholder="Email" required />
-      <input type="password" id="password-register" placeholder="Password" required />
-      <button onclick="signUp()">Register</button>
-      <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
-    </div>
+  <!-- Register Box -->
+  <div id="register-screen" class="form-container hidden">
+    <h2>📝 Register</h2>
+    <input type="text" id="fullname-register" placeholder="Full Name" required />
+    <input type="text" id="username-register" placeholder="Username" required />
+    <input type="email" id="reg-email" placeholder="Email" required />
+    <input type="password" id="reg-password" placeholder="Password" required />
+    <button onclick="signUp()">Sign Up</button>
+    <p>Already a member? <a href="#" onclick="showLogin()">Login</a></p>
   </div>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
-  <!-- CryptoJS -->
+  <!-- CryptoJS for Encryption -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
-  <!-- Script Files -->
+  <!-- Local Scripts -->
   <script src="firebase-config.js"></script>
   <script src="script.js"></script>
 </body>
