--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="light login-body">
-  <!-- Login Box -->
+  <!-- Login Screen -->
   <div id="login-screen" class="form-container slide-in">
     <h2>🔐 Sign In</h2>
     <input type="email" id="email-login" placeholder="Email" required />
@@ -16,7 +16,7 @@
     <p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
   </div>
 
-  <!-- Register Box -->
+  <!-- Register Screen -->
   <div id="register-screen" class="form-container hidden">
     <h2>📝 Register</h2>
     <input type="text" id="fullname-register" placeholder="Full Name" required />
@@ -29,8 +29,9 @@
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
   <!-- CryptoJS for Encryption -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
