--- a/index.html
+++ b/index.html
@@ -2,40 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Secure Messenger</title>
+  <title>Messenger Clone</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="light login-body">
+<body class="light">
+
   <!-- Login -->
-  <div id="login-screen" class="form-container slide-in">
+  <div id="login-screen" class="auth-container slide-in">
     <h2>🔐 Sign In</h2>
     <input type="email" id="email-login" placeholder="Email" required />
     <input type="password" id="password-login" placeholder="Password" required />
     <button onclick="signIn()">Login</button>
-    <p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
+    <p>No account? <a href="#" onclick="showRegister()">Register</a></p>
   </div>
 
   <!-- Register -->
-  <div id="register-screen" class="form-container hidden">
+  <div id="register-screen" class="auth-container hidden">
     <h2>📝 Create Account</h2>
     <input type="text" id="fullname-register" placeholder="Full Name" required />
     <input type="text" id="username-register" placeholder="Username" required />
     <input type="email" id="reg-email" placeholder="Email" required />
     <input type="password" id="reg-password" placeholder="Password" required />
     <button onclick="signUp()">Sign Up</button>
-    <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
+    <p>Already registered? <a href="#" onclick="showLogin()">Login</a></p>
   </div>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-  <!-- CryptoJS for Encryption -->
+  <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
-  <!-- Local Scripts -->
   <script src="firebase-config.js"></script>
   <script src="script.js"></script>
 </body>
