--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="light messenger-ui">
-
   <div class="app">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -28,7 +27,7 @@
     </main>
   </div>
 
-  <!-- Firebase SDK -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -37,7 +36,7 @@
   <!-- CryptoJS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
-  <!-- Scripts -->
+  <!-- App Logic -->
   <script src="firebase-config.js"></script>
   <script src="script.js"></script>
 </body>
