--- a/index.html
+++ b/index.html
@@ -3,81 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Messenger App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f9;
-    }
-    .container {
-      width: 350px;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .hidden {
-      display: none;
-    }
-  </style>
+  <title>Chat App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <!-- Login Form -->
-    <form id="loginForm" class="form">
-      <h2>Login</h2>
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
-      <button type="submit">Login</button>
-      <p>Don't have an account? <a href="#" id="switchToRegister">Register here</a></p>
-    </form>
-
-    <!-- Register Form -->
-    <form id="registerForm" class="form hidden">
-      <h2>Register</h2>
-      <input type="text" id="registerUsername" placeholder="Username" required />
-      <input type="email" id="registerEmail" placeholder="Email" required />
-      <input type="password" id="registerPassword" placeholder="Password" required />
-      <button type="submit">Register</button>
-      <p>Already have an account? <a href="#" id="switchToLogin">Login here</a></p>
-    </form>
-
-    <!-- Chat Interface -->
-    <div id="chatInterface" class="hidden">
-      <h2>Chat</h2>
-      <div id="messages" style="height: 200px; overflow-y: auto; border: 1px solid #ddd; padding: 10px;"></div>
-      <input type="text" id="newMessage" placeholder="Type a message" />
-      <button id="sendMessage">Send</button>
-    </div>
+  <div id="auth-container">
+    <h2>تسجيل الدخول</h2>
+    <input type="email" id="email" placeholder="البريد الإلكتروني">
+    <input type="password" id="password" placeholder="كلمة المرور">
+    <button id="login-btn">تسجيل الدخول</button>
+    <button id="register-btn">إنشاء حساب</button>
   </div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-  <!-- Main Script -->
-  <script src="script.js"></script>
+  <div id="chat-container" style="display: none;">
+    <h2>الدردشة</h2>
+    <div id="messages"></div>
+    <input type="text" id="message-input" placeholder="اكتب رسالة...">
+    <button id="send-btn">إرسال</button>
+  </div>
+
+  <script src="firebase-config.js" type="module"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
