--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Authentication Section -->
   <div id="auth-container">
     <h2>تسجيل الدخول</h2>
     <input type="email" id="email" placeholder="البريد الإلكتروني">
     <input type="password" id="password" placeholder="كلمة المرور">
+    <input type="text" id="username" placeholder="اسم المستخدم (للتسجيل فقط)">
     <button id="login-btn">تسجيل الدخول</button>
     <button id="register-btn">إنشاء حساب</button>
   </div>
 
+  <!-- Chat Section -->
   <div id="chat-container" style="display: none;">
     <h2>الدردشة</h2>
     <div id="messages"></div>
