--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تسجيل الدخول</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>تطبيق دردشة</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="auth-container">
     <h2>تسجيل الدخول</h2>
-    <input type="email" id="email" placeholder="البريد الإلكتروني">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <input type="text" id="username" placeholder="اسم المستخدم (للتسجيل فقط)">
-    <button id="login-btn">تسجيل الدخول</button>
-    <button id="register-btn">إنشاء حساب</button>
+    <input type="email" id="email" placeholder="البريد الإلكتروني"><br>
+    <input type="password" id="password" placeholder="كلمة المرور"><br>
+    <button onclick="login()">دخول</button>
+    <button onclick="signup()">إنشاء حساب</button>
   </div>
 
-  <script src="firebase-config.js" type="module"></script>
-  <script src="script.js" type="module"></script>
+  <div id="chat-container" style="display: none;">
+    <h2>مرحبًا بك في الدردشة!</h2>
+    <div id="messages"></div>
+    <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
+    <button onclick="sendMessage()">إرسال</button>
+    <button onclick="logout()">خروج</button>
+  </div>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
