--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>تسجيل الدخول</h2>
     <input type="email" id="email" placeholder="البريد الإلكتروني"><br>
     <input type="password" id="password" placeholder="كلمة المرور"><br>
-    <button onclick="login()">دخول</button>
-    <button onclick="signup()">إنشاء حساب</button>
+    <button onclick="login(event)">دخول</button>
+    <button onclick="signup(event)">إنشاء حساب</button>
   </div>
 
   <div id="chat-container" style="display: none;">
