--- a/index.html
+++ b/index.html
@@ -2,30 +2,20 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <title>تطبيق دردشة</title>
+  <title>تسجيل الدخول</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="auth-container">
-    <h2>تسجيل الدخول</h2>
+    <h2>مرحبا بك في تطبيق الدردشة</h2>
     <input type="email" id="email" placeholder="البريد الإلكتروني"><br>
     <input type="password" id="password" placeholder="كلمة المرور"><br>
     <button onclick="login(event)">دخول</button>
     <button onclick="signup(event)">إنشاء حساب</button>
   </div>
 
-  <div id="chat-container" style="display: none;">
-    <h2>مرحبًا بك في الدردشة!</h2>
-    <div id="messages"></div>
-    <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
-    <button onclick="sendMessage()">إرسال</button>
-    <button onclick="logout()">خروج</button>
-  </div>
-
-  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
