--- a/chat.html
+++ b/chat.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدردشة</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>غرفة الدردشة</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="chat-container">
-    <h2>الدردشة</h2>
-    <div id="messages"></div>
-    <input type="text" id="message-input" placeholder="اكتب رسالة...">
-    <button id="send-btn">إرسال</button>
-  </div>
+  <h2>مرحبًا بك في غرفة الدردشة!</h2>
+  <div id="messages"></div>
+  <input type="text" id="message-input" placeholder="اكتب رسالتك هنا...">
+  <button onclick="sendMessage()">إرسال</button>
+  <button onclick="logout()">خروج</button>
 
-  <script src="firebase-config.js" type="module"></script>
-  <script src="script.js" type="module"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
