--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </form>
   </div>
 
+  <!-- تأكد أن هذا هو الشكل الصحيح لاستيراد Firebase -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
