--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div class="chat-container">
+    <header>
+      <h3>دردشة مباشرة</h3>
+      <button id="darkModeToggle">🌙</button>
+    </header>
     <div id="chat-box"></div>
     <form id="message-form">
       <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." required />
@@ -15,7 +19,6 @@
     </form>
   </div>
 
-  <!-- تأكد أن هذا هو الشكل الصحيح لاستيراد Firebase -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
