--- a/index.html
+++ b/index.html
@@ -1,236 +1,20 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ماسنجر صغير</title>
-  <style>
-    /* يمكنك وضع CSS هنا أو ربطه بـ style.css */
-    * {
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #f0f2f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .login-box, .chat-container {
-      width: 100%;
-      max-width: 400px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      overflow: hidden;
-      display: none;
-      flex-direction: column;
-    }
-
-    .login-box {
-      display: flex;
-      flex-direction: column;
-      padding: 30px;
-      text-align: center;
-    }
-
-    .login-box input {
-      padding: 10px;
-      margin: 15px 0;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-    }
-
-    .login-box button {
-      padding: 10px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 90vh;
-    }
-
-    header {
-      background: #007bff;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-
-    #chat-box {
-      flex: 1;
-      padding: 15px;
-      overflow-y: auto;
-    }
-
-    .message {
-      background: #e4e6eb;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 10px;
-      max-width: 70%;
-    }
-
-    .message.user {
-      background: #007bff;
-      color: white;
-      align-self: flex-end;
-    }
-
-    #message-form {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-    }
-
-    #message-input {
-      flex: 1;
-      padding: 10px;
-      border: none;
-      border-radius: 20px;
-      background: #f1f2f4;
-      outline: none;
-    }
-
-    button[type="submit"] {
-      margin-right: 10px;
-      padding: 10px 15px;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 20px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تطبيق دردشة مع Firebase</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
-
-  <!-- نموذج تسجيل الدخول -->
-  <div class="login-box" id="loginBox">
-    <h2>مرحبًا بك!</h2>
-    <input type="text" id="username" placeholder="ادخل اسمك" required />
-    <button onclick="startChat()">ابدأ الدردشة</button>
-  </div>
-
-  <!-- واجهة المحادثة -->
-  <div class="chat-container" id="chatContainer">
-    <header>
-      <h3>دردشة مباشرة</h3>
-    </header>
-    <div id="chat-box"></div>
-    <form id="message-form">
-      <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." required />
-      <button type="submit">إرسال</button>
-    </form>
-  </div>
-
-  <!-- Firebase + المنطق -->
-  <script type="module">
-    import {
-      messagesRef,
-      push,
-      onValue,
-      set,
-      remove,
-      auth,
-      signInAnonymously,
-      onAuthStateChanged
-    } from './firebase.js';
-
-    const chatBox = document.getElementById('chat-box');
-    const messageForm = document.getElementById('message-form');
-    const messageInput = document.getElementById('message-input');
-    const loginBox = document.getElementById('loginBox');
-    const chatContainer = document.getElementById('chatContainer');
-
-    let username = '';
-    let currentUser = null;
-
-    function startChat() {
-      const name = document.getElementById('username').value.trim();
-      if (name) {
-        username = name;
-        localStorage.setItem('username', name);
-        loginBox.style.display = 'none';
-        chatContainer.style.display = 'flex';
-        signInAnonymously(auth);
-      } else {
-        alert("يرجى إدخال اسمك");
-      }
-    }
-
-    // الانتظار حتى يتم تسجيل الدخول
-    onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        currentUser = user;
-        loadMessages();
-      } else {
-        await signInAnonymously(auth).catch(console.error);
-      }
-    });
-
-    function loadMessages() {
-      onValue(messagesRef, (snapshot) => {
-        chatBox.innerHTML = '';
-        snapshot.forEach((childSnapshot) => {
-          const msg = childSnapshot.val();
-          addMessageToChat(msg.text, msg.sender, msg.time, childSnapshot.key, msg.uid);
-        });
-        chatBox.scrollTop = chatBox.scrollHeight;
-      });
-    }
-
-    messageForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      if (!currentUser) return;
-
-      const text = messageInput.value.trim();
-      if (text !== '') {
-        const time = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-
-        const newMsgRef = push(messagesRef);
-        set(newMsgRef, {
-          text,
-          sender: username,
-          time,
-          uid: currentUser.uid
-        });
-
-        messageInput.value = '';
-      }
-    });
-
-    function addMessageToChat(text, sender, time, key, uid) {
-      const div = document.createElement('div');
-      div.className = 'message';
-      if (sender === username) {
-        div.classList.add('user');
-      }
-
-      div.innerHTML = `
-        <strong>${sender}</strong><br/>
-        ${text}<br/>
-        <small>${time}</small>
-        ${uid === currentUser?.uid ? `<button onclick="deleteMessage('${key}')">🗑️ حذف</button>` : ''}
-      `;
-      chatBox.appendChild(div);
-    }
-
-    window.deleteMessage = (key) => {
-      remove(ref(getDatabase(), 'messages/' + key));
-    };
-  </script>
-
+    <div class="chat-container">
+        <div class="chat-header">
+            <h2>الدردشة العالمية</h2>
+        </div>
+        <div class="chat-box" id="chat-box"></div>
+        <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
+        <button id="send-button">إرسال</button>
+    </div>
 </body>
 </html>
