--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تطبيق دردشة مع Firebase</title>
+    <title>تسجيل الدخول</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js" defer></script>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>الدردشة العالمية</h2>
-        </div>
-        <div class="chat-box" id="chat-box"></div>
-        <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
-        <button id="send-button">إرسال</button>
+    <div class="container">
+        <h2>تسجيل الدخول</h2>
+        <input type="email" id="email" placeholder="البريد الإلكتروني" required>
+        <input type="password" id="password" placeholder="كلمة المرور" required>
+        <input type="text" id="username" placeholder="اسم المستخدم" required>
+        <button id="register-button">سجل الآن</button>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-firestore.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
