--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="username" placeholder="اسم المستخدم" style="display: none;" required>
         <button id="auth-button">تسجيل دخول</button>
         <p id="toggle-link">ليس لديك حساب؟ سجل الآن!</p>
+        <div id="feedback" style="color: red;"></div> <!-- عنصر لعرض الرسائل -->
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
