--- a/chat.html
+++ b/chat.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الدردشة</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>الدردشة مع <span id="username-display"></span></h2>
-        </div>
-        <div class="chat-box" id="chat-box"></div>
-        <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
-        <button id="send-button">إرسال</button>
+<div class="chat-container">
+    <div class="chat-header">
+        <h2>الدردشة مع <span id="username-display"></span></h2>
     </div>
-
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-firestore.js"></script>
-    <script src="chat.js" type="module"></script>
-</body>
-</html>
+    <div id="feedback-message" style="color: red;"></div> <!-- عنصر لعرض رسائل الأخطاء -->
+    <div class="chat-box" id="chat-box"></div>
+    <input type="text" id="message-input" placeholder="اكتب رسالتك هنا..." />
+    <button id="send-button">إرسال</button>
+</div>
