--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل أو تسجيل دخول</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- رابط لملف CSS -->
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
         <input type="text" id="username" placeholder="اسم المستخدم" style="display: none;" required>
         <button id="auth-button">تسجيل دخول</button>
         <p id="toggle-link">ليس لديك حساب؟ سجل الآن!</p>
-        <div id="feedback" style="color: red;"></div> <!-- عنصر لعرض الرسائل -->
+        <div id="feedback"></div> <!-- عنصر لعرض الرسائل -->
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
