--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h2>الدردشة مع <span id="username-display"></span></h2>
+            <h2>الدردشة مع <span id="username-display"></span></h2> <!-- اسم المستخدم هنا -->
         </div>
         <div id="feedback-message"></div> <!-- عنصر لعرض رسائل الأخطاء -->
         <div class="chat-box" id="chat-box"></div>
